fix text align center in slider

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -35,7 +35,7 @@
   h3{
     font-size:25px;
   }
-  
+  text-align: center;
   height: auto;
   width: 80%;
   vertical-align: middle;
